--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "aaline": "bin/cli.js"
+    "tefcha": "bin/cli.js"
   },
   "shebang": [
     {
@@ -19,16 +19,19 @@
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
+    "@types/jest": "^26.0.9",
     "@types/node": "^14.0.23",
+    "jest": "^26.2.2",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-shebang": "^1.2.9",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.6"
   },
   "scripts": {
     "watch": "parcel index.html --open",
     "build-cli": "parcel build --target node bin/cli.ts --out-dir bin --out-file cli.js",
-    "ins": "npm uninstall -g aaline && npm install -g",
+    "ins": "npm uninstall -g tefcha && npm install -g",
     "deploy": "npm-run-all build-cli ins"
   },
   "keywords": [],
