--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "watch": "parcel debug/index.html --open",
     "build-cli": "parcel build --target node bin/cli.ts --out-dir bin --out-file cli.js",
-    "build-browser": "parcel build --target browser browser/main.ts --out-dir dist --out-file tefcha.js",
+    "build-browser": "parcel build --experimental-scope-hoisting --detailed-report 10 --target browser browser/main.ts --out-dir dist --out-file tefcha.js",
     "ins": "npm uninstall -g tefcha && npm install -g",
     "deploy": "npm-run-all build-cli ins",
     "build": "npm-run-all build-cli build-browser",
