--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "^14.0.23",
+    "cspell": "^4.1.0",
     "jest": "^26.4.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.1",
@@ -33,6 +34,7 @@
     "build": "npm-run-all -p build:*",
     "test": "jest",
     "clean": "rimraf dist umd",
+    "spell": "cspell **/*",
     "demo": "opener demo/index.html"
   },
   "keywords": [
