--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "es2018",
       "dom"
     ],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true
   },
   "include": ["src/**/*"],
   "exclude": [
