--- a/examples/rich_editor/package.json
+++ b/examples/rich_editor/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "scripts": {
     "watch": "parcel ./index.html --open",
-    "clean": "rimraf umd",
-    "build": "parcel build --detailed-report 10 ./index.html --out-dir umd"
+    "clean": "rimraf dist",
+    "build": "yarn clean && parcel build --target browser index.html --out-dir dist --out-file index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "cache": {
+    "strategy": "inject"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.0",
@@ -24,6 +28,8 @@
     "@types/react-dom": "^17.0.9",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.5",
-    "rimraf": "^3.0.2"
+    "parcel-plugin-sw-cache": "^0.3.1",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4"
   }
 }
