--- a/examples/rich_editor/package.json
+++ b/examples/rich_editor/package.json
@@ -21,7 +21,8 @@
     "ace-builds": "^1.4.12",
     "react": "^17.0.2",
     "react-ace": "^9.4.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
