--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dist/esm",
     "umd"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "jsonschema": "^1.4.0"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "^14.0.23",
