--- a/examples/rich-editor/package.json
+++ b/examples/rich-editor/package.json
@@ -19,6 +19,7 @@
     "@rjsf/core": "^3.0.0",
     "@rjsf/material-ui": "^3.0.0",
     "ace-builds": "^1.4.12",
+    "brace": "^0.11.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.1",
     "react-dom": "^17.0.2",
