--- a/examples/rich-editor/package.json
+++ b/examples/rich-editor/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "watch": "parcel ./index.html --open",
+    "icon": "ts-node scripts/makeIcons.ts",
     "clean": "rimraf dist",
     "build": "yarn clean && parcel build --target browser index.html --public-url \".\" --out-dir dist --out-file index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,10 +29,12 @@
   "devDependencies": {
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/sharp": "^0.28.4",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-sw-cache": "^0.3.1",
     "rimraf": "^3.0.2",
+    "sharp": "^0.28.3",
     "shelljs": "^0.8.4"
   }
 }
