--- a/examples/rich-editor/package.json
+++ b/examples/rich-editor/package.json
@@ -21,6 +21,7 @@
     "@rjsf/material-ui": "^3.0.0",
     "ace-builds": "^1.4.12",
     "brace": "^0.11.1",
+    "jsonschema": "^1.4.0",
     "png-chunk-text": "^1.0.0",
     "png-chunks-encode": "^1.0.0",
     "png-chunks-extract": "^1.0.0",
